--- a/plot of time Vs. Mass (asteroids_low).ipynb
+++ b/plot of time Vs. Mass (asteroids_low).ipynb
@@ -46,8 +46,8 @@
    ],
    "source": [
     "times, max_mass, mean_mass, n_particles, stepnumber = np.loadtxt('../time_mass.txt')\n",
-    "plt.loglog(stepnumber, max_mass, 'b', label='First Line')\n",
-    "plt.loglog(stepnumber, mean_mass, 'g',label='second Line')"
+    "plt.loglog(time, max_mass, 'b', label='First Line')\n",
+    "plt.loglog(time, mean_mass, 'g',label='second Line')"
    ]
   },
   {
